# ghboot

./: LICENSE  README.md  SPEC.md  pyproject.toml
ghboot/: __init__.py  bootstrap.py  cli.py
ghboot/steps/: git_init.py  github_remote.py  gitignore.py  initial_commit.py  readme.py
